templates/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -c -f nightingale.yaml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -c -f nightingale.yaml
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/nightingale: "true"
        io.kompose.service: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: "1234"
            - name: TZ
              value: Asia/Shanghai
          image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql/
              name: mysql-claim0
            - mountPath: /docker-entrypoint-initdb.d/
              name: mysql-claim1
            - mountPath: /etc/my.cnf
              name: mysql-claim2
      hostname: mysql
      restartPolicy: Always
      volumes:
        - name: mysql-claim0
          persistentVolumeClaim:
            claimName: mysql-claim0
        - name: mysql-claim1
          persistentVolumeClaim:
            claimName: mysql-claim1
        - name: mysql-claim2
          persistentVolumeClaim:
            claimName: mysql-claim2
status: {}
