templates/nserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -c -f nightingale.yaml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: nserver
  name: nserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -c -f nightingale.yaml
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/nightingale: "true"
        io.kompose.service: nserver
    spec:
      containers:
        - args:
            - /app/n9e
            - server
          image: ulric2019/nightingale:5.5.0
          name: nserver
          ports:
            - containerPort: 19000
          resources: {}
          volumeMounts:
            - mountPath: /app/etc
              name: nserver-claim0
      hostname: nserver
      restartPolicy: Always
      volumes:
        - name: nserver-claim0
          persistentVolumeClaim:
            claimName: nserver-claim0
status: {}
