templates/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -c -f nightingale.yaml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -c -f nightingale.yaml
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/nightingale: "true"
        io.kompose.service: redis
    spec:
      containers:
        - env:
            - name: TZ
              value: Asia/Shanghai
          image: redis:6.2
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
      hostname: redis
      restartPolicy: Always
status: {}
