templates/telegraf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -c -f nightingale.yaml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: telegraf
  name: telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: telegraf
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -c -f nightingale.yaml
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/nightingale: "true"
        io.kompose.service: telegraf
    spec:
      containers:
        - env:
            - name: TZ
              value: Asia/Shanghai
          image: telegraf:1.20.3
          name: telegraf
          ports:
            - containerPort: 8125
              protocol: UDP
            - containerPort: 8092
              protocol: UDP
            - containerPort: 8094
          resources: {}
          volumeMounts:
            - mountPath: /etc/telegraf/telegraf.conf
              name: telegraf-claim0
      hostname: telegraf01
      restartPolicy: Always
      volumes:
        - name: telegraf-claim0
          persistentVolumeClaim:
            claimName: telegraf-claim0
status: {}
