templates/nserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -c -f nightingale.yaml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: nserver
  name: nserver
spec:
  ports:
    - name: "19000"
      port: 19000
      targetPort: 19000
  selector:
    io.kompose.service: nserver
status:
  loadBalancer: {}
