templates/nwebapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -c -f nightingale.yaml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: nwebapi
  name: nwebapi
spec:
  ports:
    - name: "18000"
      port: 18000
      targetPort: 18000
  selector:
    io.kompose.service: nwebapi
status:
  loadBalancer: {}
